Implemented Notifier to allow for future alternative notification types